@@ -682,6 +682,9 @@
       since Windows does not work correctly with such directory names.
       This is now warned about in \command{R CMD check}, and will not be
       allowed in \R 2.14.x.
+
+      \item The vignette indices are more comprehensive (in the style of
+      \code{browseVignetttes()}).
     }
   }
 
